--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hapi/inert": "5.2.1",
     "@hapi/joi": "15.1.0",
     "@hapi/vision": "5.5.2",
+    "@jwerre/secrets": "^0.2.2",
     "aws-sdk": "2.488.0",
     "bcryptjs": "2.4.3",
     "bootflat": "2.0.4",
